Todo: delete game over text onj restart AND restart button restart game -> solve first highscore make restart button make info text class -> jump activated, score +5seconds fix font on controls question
cant split intervals.
 solve refresh restart
 .....

solved info, todo: higscore- cookie
solved highscore

TODO: STYLE  + other

--- a/style.css
+++ b/style.css
@@ -29,27 +29,36 @@ body{
 }
 
 #controls_container{
+    top: 85%;
     display: block;
-    height: 20%;
+    height: 15%;
     width: 100%;
+    position: fixed;
 }
 
 .leftButton{
     /*  ALIGN LEFT*/
     float: left;
-}
+    display: block;
+    top: 50%;}
 .rightButton{
     /*  ALIGN RIGHT*/
     float: right;
     display: block;
+    top: 50%;
+
 }
 .upButton0{
     /*  ALIGN LEFT*/
     float: left;
+    display: block;
+    top: 50%;
 }
 
 .upButton1{
     float: right;
+    display: block;
+    top: 50%;
     /*  ALIGN RIGHT*/
 }
 button{
@@ -94,4 +103,15 @@ button{
     width: 100%;
     font-size: large;
     font-family: Arial;
+}
+
+header{
+    top: 0;
+    width: 100%;
+}
+
+.headerButtons {
+    width: 200px;
+    height: 30px;
+    display: inline-block;
 }
